# status-keycard-qt

./: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIFFERENCES.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple_usage.c
src/: android_nfc_bridge.cpp  c_api.cpp  signal_manager.cpp  signal_manager.h
src/flow/: flow_manager.cpp  flow_manager.h  flow_signals.cpp  flow_state_machine.cpp
src/flow/flows/: change_pairing_flow.cpp  change_pin_flow.cpp  change_puk_flow.cpp  export_public_flow.cpp  flow_base.cpp  flow_base.h  get_app_info_flow.cpp  get_metadata_flow.cpp  load_account_flow.cpp  login_flow.cpp  recover_account_flow.cpp  sign_flow.cpp  store_metadata_flow.cpp
src/rpc/: rpc_service.cpp  rpc_service.h
src/session/: session_manager.cpp  session_manager.h  session_state.h
src/storage/: pairing_storage.cpp  pairing_storage.h
tests/: CMakeLists.txt  test_c_api.cpp  test_c_api_comprehensive.cpp  test_flow_integration.cpp  test_flow_integration_with_di.cpp  test_flow_logic_only.cpp  test_flow_manager.cpp  test_flow_signal_routing.cpp  test_flow_state_machine.cpp  test_flow_with_mock_backend.cpp  test_integration.cpp  test_pairing_storage.cpp  test_session_manager.cpp  test_sign_flow_tlv_parsing.cpp
tests/mocks/: mock_keycard_backend.cpp  mock_keycard_backend.h
